--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "goit-react-hw-04-hooks-feedback",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://Ivan-Loboda.github.io/goit-react-hw-04-hooks-feedback",
